--- a/animations.css
+++ b/animations.css
@@ -40,3 +40,25 @@
         right: 10%;
     }
 }
+
+@keyframes prev_btn_movement{
+    0%{
+        transform: rotate(15deg)
+    }
+    50%{
+        transform: rotate(-15deg);
+    }
+    100%{
+        transform: rotate(15deg)
+    }
+}
+@keyframes rotate{
+    100%{
+        transform: rotate(360deg);
+    }
+}
+@keyframes rotateRev{
+    100%{
+        transform: rotate(-360deg);
+    }
+}
