--- a/css.css
+++ b/css.css
@@ -13,6 +13,8 @@ body{
     width: 100%;
     height: 100vh;
     position: absolute;
+    user-select: none;
+    display: none;
 }
 #audio{
     position: absolute;
@@ -127,16 +129,6 @@ body{
     top: 40%;
     animation: rotate 20s linear infinite;
 }
-@keyframes rotate{
-    100%{
-        transform: rotate(360deg);
-    }
-}
-@keyframes rotateRev{
-    100%{
-        transform: rotate(-360deg);
-    }
-}
 #cat_gif{
     width: 10vw;
     position: absolute;
@@ -161,21 +153,109 @@ body{
 #shop_section{
     width: 100%;
     height: 100vh;
-    display: none;
+    /* display: none; */
     z-index: 0;
-    background: url();
+    background: url("Images/shop_background.jpg");
+    background-size: cover;
 }
+.coins_container{
+    position: absolute;
+    right: 2vw;
+    top: 2vw;
+    background: rgb(52, 58, 140);
+    border-radius: 3vw;
+    height: 3vw;
+    width: 8%;
+    display: flex;
+    font-size: 1.4vw;
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#shop_items_container{
+    position: absolute;
+    left: 50%;
+    top: 55%;
+    transform: translate(-50%,-50%);
+    width: 60%;
+    height: 35vw;
+    background: white;
+    border-radius: 5vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    box-shadow: 0 0 2vw rgb(155, 155, 155);
+    user-select: none;
+}
+.shop_items_box{
+    width: 21%;
+    height: 36%;
+    border-radius: 50%;
+    background: #FAC7CC;
+    background: #D0AAC6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border: 0.1vw solid #484467;
+    box-shadow: 0 0 1vw grey;
+}
+.shop_items_box > img{
+    width: 70%;
+}
+.shop_items_box:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+}
+.price{
+    background: white;
+    border-radius: 2vw;
+    height: 2.5vw;
+    width: 80%;
+    display: flex;
+    font-size: 1.2vw;
+    color: black;
+    align-items: center;
+    justify-content: center;
+    border: 0.1vw solid #484467;
+}
+.price > img{
+    height: 100%;
+    margin: 0 5%;
+    margin-right: -2%;
+}
+.price:hover{
+    background: rgb(52, 58, 140);
+    color: white;
+}
+
 #inventory_section{
     width: 100%;
     height: 100vh;
     display: none;
     z-index: 0;
+    background: url("Images/inventory_background.jpg");
+    background-size: 100% 100%;
 }
 #settings_section{
     width: 100%;
     height: 100vh;
     display: none;
     z-index: 0;
+    background: url("Images/shop_background.jpg");
+}
+.return{
+    position: absolute;
+    left: 3vw;
+    top: 1vw;
+    user-select: none;
+}
+.return:hover{
+    transition: 0.5s;
+    cursor: pointer;
+    transform: scale(1.2);
+    animation: prev_btn_movement 2s ease-in-out infinite;
 }
 
 #first_level{
