--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ body{
     height: 100vh;
     position: absolute;
     user-select: none;
-    /* display: none; */
+    display: none;
 }
 #audio{
     position: absolute;
@@ -105,7 +105,7 @@ body{
 #inventory{
     top: 22vw;
 }
-#settings{
+.settings{
     top: 27vw;
 }
 #earth{
@@ -286,7 +286,6 @@ body{
     overflow: auto;
 }
 #shop_items_wrapper{
-    padding-bottom: 1000px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -312,7 +311,7 @@ body{
 }
 .shop_items_box{
     width: 21%;
-    height: 36%;
+    height: 12vw;
     border-radius: 50%;
     margin: 4% 0;
     background: #FAC7CC;
@@ -326,7 +325,8 @@ body{
     transition: 0.5s;
 }
 .shop_items_box > img{
-    width: 70%;
+    width: 9vw;
+    /* border-radius: 50% 50% 0 0; */
 }
 .shop_items_box:hover{
     transform: scale(1.1);
@@ -471,17 +471,17 @@ body{
     width: 60%;
     height: 35vw;
     background: linear-gradient(#4e54c8,#8f94fb);
-    /* background: white; */
     border-radius: 5vw 0 0 5vw;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: space-evenly;
     box-shadow: 0 0 2vw rgb(155, 155, 155);
     user-select: none;
     overflow: auto;
 }
 #inventory_items_wrapper{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -608,15 +608,36 @@ body{
 #too_long_name{
     width: 50%;
 }
+#too_short_name{
+    width: 50%;
+}
 
 /* ============================================================================== */
 /* ============================================================================== */
 /*                                  LEVELS */
 /* ============================================================================== */
 /* ============================================================================== */
-#first_level{
+#levels_section{
     width: 100%;
     height: 100vh;
-    display: none;
+    flex-wrap: wrap;
     z-index: 0;
+    background-image: url("../Images/Levels/level_section_background_1.png");
 }
+#dancing_cat_in_levels_section{
+    position: absolute;
+    right: 37%;
+    bottom: 22%;
+    width: 10%;
+}
+.settings_btn{
+    position: absolute;
+    width: 5vw;
+    height: 5vw;
+    right: 5%;
+    top: 2vw;
+    background: whitesmoke;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
